kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: blog
    labels:
        app.kubernetes.io/managed-by: kubectl
