kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rails-blog-service
spec:
    selector:
        app: rails-blog
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
